# Spinnaker-Viewer

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt
examples/src/: calibrate.cpp  capture.cpp  lscam.cpp
include/spinnaker/: wrapper.h
include/util/: assert.h
lib/spinnaker/: assert.h  spinnaker.cpp  spinnaker.h
ros2/: CMakeLists.txt  package.xml
ros2/include/: common.h
ros2/src/: capture.cpp  main.cpp
scripts/: FindSpinnaker.cmake  common.cmake
src/: main.cpp
src/spinnaker/: wrapper.cpp
