<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
=============================================================================
TODO: Add file description
=============================================================================
License: MIT
Author: Yuxuan Zhang (zhangyuxuan@ufl.edu)
=============================================================================
-->
<package format="3">
  <name>spinnaker_camera</name>
  <version>0.0.0</version>
  <description>ROS2 Bridge for Spinnaker 4 SDK</description>
  <maintainer email="zhangyuxuan@ufl.edu">Yuxuan Zhang</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
